--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@testing-library/user-event": "13.5.0",
     "axios": "0.24.0",
+    "bootstrap": "^5.1.3",
     "cors": "2.8.5",
     "css-loader": "^6.5.1",
     "express": "4.17.1",
